day8/apps/dotnetcore/manifests/scmapi/scm-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-contacts
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Accept-Language"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "12m"
    nginx.ingress.kubernetes.io/rewrite-target: "/api/contacts/$2"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - #{APPHOSTNAME}#
      secretName: tls-secret
  rules:
  - host: #{APPHOSTNAME}#
    http:
      paths:
      - path: /api/contacts(/|$)(.*)
        backend:
          serviceName: contacts
          servicePort: 8080
